glx/testdata/invalid/custom-vocab-edge-cases/repositories/repo-custom.glx
repositories:
  repo-custom:
    name: "Custom Repository"
    type: unknown-repo-type


